# cpp_labs

./: .clang-format  README.md
.github/workflows/: build.yml
lab_1/: CMakeLists.txt  README.md
lab_1/include/: functions.h  menu.h  string.h
lab_1/src/: functions.cpp  main.cpp  menu.cpp  string.cpp
lab_2/: CMakeLists.txt  README.md
lab_2/include/: array.h  consts.h  menu.h  utils.h
lab_2/src/: array.cpp  menu.cpp  utils.cpp
lab_3/: CMakeLists.txt  README.md
lab_3/include/: airplane.h  car.h  consts.h  functions.h  passenger_carrier.h  program.h  train.h  utils.h
lab_3/src/: airplane.cpp  car.cpp  functions.cpp  menus.cpp  passenger_carrier.cpp  program.cpp  train.cpp  utils.cpp
lab_4/: CMakeLists.txt  README.md
lab_4/include/: airplane.h  car.h  cargo_carrier.h  consts.h  functions.h  menu.h  program.h  train.h
lab_4/src/: airplane.cpp  car.cpp  cargo_carrier.cpp  functions.cpp  menu.cpp  menus.cpp  program.cpp  train.cpp
lab_5/: CMakeLists.txt  README.md
lab_5/include/: const.h  function.h  menu.h
lab_5/src/: function.cpp  main.cpp  menu.cpp
lab_6/: README.md
lab_6/include/: consts.h  date.h  program.h  utils.h
lab_6/src/: date.cpp  main.cpp  menu.cpp  program.cpp  utils.cpp
lab_7/: README.md
lab_7/include/: automatic_telephone_station.h  city_code.h  city_name.h  consts.h  date.h  menu.h  my_time.h  phone_number.h  phone_numbers.h  program.h  tariff.h  utils.h
lab_7/src/: automatic_telephone_station.cpp  city_code.cpp  city_name.cpp  date.cpp  main.cpp  menu.cpp  my_time.cpp  phone_number.cpp  program.cpp  (+3 more)
lab_8/: README.md
(+9 files in other folders)
